--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -19,8 +19,8 @@
 				
 					
 	                <td width="900" height="175" id="entete">
-					<a id="essais" rel="elephant">
-				<img src="images/tolbiac.jpg" alt="Plagiat Editions entête" width="900" height="167" />
+					<a id="contacts" rel="tolbiac">
+				<img src="https://drive.google.com/id?uc=1EqJ06Hk8G6lfdu0FGgRJWg6CUCt5mOYb" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>Lever matin n'est point bonheur&#8239;; boire matin est le meilleur&#8239;.</cite> Rabelais<span></figcaption>
 			        </td>
@@ -71,7 +71,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>plagiatedition(at)protonmail.com</h3>
+			<caption><span><h3>plagiatedition(at)protonmail.com</h3><i>
 			<h3>editions-plagiat-admin(at)protonmail</h3>
 			<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
 			
@@ -82,10 +82,19 @@
 			
 			
 			
-			
 			    <tr>
 	                <td width="425" id="titre">
-						<span><br><br>liste de auteurs publiés<br>
+						<span><p><br>liste des auteurs publiés :<br>
+						ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i>(Socle théorique),<br>
+						DEBORD, Guy, <i>Sur la Commune, Le Questionnaire de l’I.S., De la misère en milieu étudiant, Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i>(socle théorique),<br>
+						DIN, Mamoste, <i>Ne pas mourir comme des chiens</i>(bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i>(Socle théorique), et graphisme du site,<br>
+						KOTANYI, Attila, <i>Sur la Commune</i> (socle théorique),<br>
+						MARX, Karl, <i>Contribution à la critique de La philosophie du droit de Hegel</i> (socle théorique),<br>
+						PANNEKOEK, Anton, <i>Lettre à Socialisme ou Barbarie</i>(socle théorique),<br>
+						SANGUINETTI, Gianfranco (Censor), <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique),<br>
+						VANEGEIM, Raoul, <i>Sur la Commune</i> (socle théorique),<br>
+						VELOCE, (présents sur Plagiat mais non publiés), <i>La civilisation du jeu, Ci-gît la critique, Après l'orage</i> (socle théorique)
+Réponse à frédéric lordon 
 		        </tr>
 			
 	        </table>
@@ -94,7 +103,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
      <a id="affiche" rel="catalogue/essais">
-				<img src="images/page42.jpg" alt="affiche1tolbiac" width="300" height="auto" />
+				<img src="https://drive.google.com/uc?id=12oTfASI56xQt-yFCZZBXx62tKhytbip0" alt="affiche1tolbiac" width="300" height="auto" />
 			</a>
     </div>
   </div>
