--- a/plagiat_ed_boutique_npmcc.html
+++ b/plagiat_ed_boutique_npmcc.html
@@ -108,7 +108,7 @@ partageons un moment de la vie du camp et apprenons à
 					<p><span><i>Ne pas mourir comme des chiens</i><span></p>
 					<p><span>de Mamoste Dîn<span></p>
 					<p><span> version française</p>
-					<p><span><b>prix 12 euro</b>, sans les frais de port<span></p>
+					<p><span><b>prix 12 euros</b>, sans les frais de port<span></p>
 					
 				
 			        </td>
