--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -20,7 +20,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<a id="contacts" rel="tolbiac">
-				<img src="https://drive.google.com/id?uc=1EqJ06Hk8G6lfdu0FGgRJWg6CUCt5mOYb" alt="Plagiat Editions entête" width="900" height="167" />
+				<img src="https://drive.google.com/uc?id=1EqJ06Hk8G6lfdu0FGgRJWg6CUCt5mOYb" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>Lever matin n'est point bonheur&#8239;; boire matin est le meilleur&#8239;.</cite> Rabelais<span></figcaption>
 			        </td>
@@ -71,7 +71,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>plagiatedition(at)protonmail.com</h3><i>
+			<caption><span><h3>plagiatedition(at)protonmail.com</h3>
 			<h3>editions-plagiat-admin(at)protonmail</h3>
 			<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
 			
