--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Editions Plagiat</title>  
+<title>Editions Plagiat</title> 
+<link rel="icon" type="image/png" href="./static/logo.png" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_BD_ne_pas_mourir.css" />
 </head>
