--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Plagiat Edition BD</title>  
+<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_BD.css" />
 </head>
