--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat-bd-ne-pas-mourir-comme-des-chiens/mamoste-din</title>  
+<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_BD_ne_pas_mourir.css" />
 </head>
