--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -73,11 +73,12 @@
 	<br>
 	<br>
 			<caption><span><h3>plagiatedition(at)protonmail.com</h3>
-			<h3>editions-plagiat-admin(at)protonmail</h3>
 			<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
+			<h3>editions-plagiat-admin(at)protonmail</h3>
 			
 			
-			<br>Ne pas hésiter à utiliser ce mail pour nous relayer textes ou autres productions&#8239;.<span></caption>    
+			<br>Ne pas hésiter à nous contacter avec le mail adéquat pour nous relayer textes ou autres productions&#8239;.
+				<br> pour toutes autres raisons utiliser le mail administratif. <span></caption>    
 	         
             <br>
 			
@@ -85,7 +86,7 @@
 			
 			    <tr>
 	                <td width="425" id="titre">
-						<span><p><br>liste des auteurs publiés :<br><br>
+						<span><p><br>liste des auteurs :<br><br>
 						ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique),<br><br>
 						DEBORD, Guy, <i>Sur la Commune, Le Questionnaire de l’I.S., De la misère en milieu étudiant, Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (socle théorique),<br><br>
 						DIN, Mamoste, <i>Ne pas mourir comme des chiens</i> (bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique), et graphisme du site,<br><br>
