--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -87,7 +87,7 @@
 			<caption><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.</h4> 
 			Catalogue rangé par ordre alphabétique 
-			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;Menu<span></caption>    
+			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i><span></caption>    
 	         
             <br>
 			    <tr>
