--- a/plagiat_ed_articles.html
+++ b/plagiat_ed_articles.html
@@ -24,7 +24,7 @@
 					<a id="enteteaction-evenements" rel="debutaction">
 				<img src="https://drive.google.com/uc?id=1Trh4CIou8SK0OSD715Pn4Mc3IXB4vkE3" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>Mais pour tous ces coquins, il y de la dynamite, vive le son, vive le son de l'explosion!</cite> Ravachol<span></figcaption>
+			<figcaption><span><cite>Mais pour tous ces coquins, il y de la dynamite, vive le son de l'explosion!</cite> Ravachole<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
