--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -78,7 +78,7 @@
 			<p>A l'inverse, l'omniprésente falsification-banalisation des idées révolutionnaires par ceux qui pensent en être les héritiers - universitaires, trotskystes, syndicalistes ou d'ailleurs n'importe quels fumistes faussement désabusés - est la preuve vivante du formatage des consciences, de l'appauvrissement des personnalités. Ceux qui se méfient de la tradition marxiste et ceux qui la glorifient montrent la même incapacité à l'utiliser ou à la comprendre.</p>
 			<p>C’est par une conscience claire de son propre parcours, par un refus intransigeant de la médiocrité et de l’inconséquence des goûts, des modèles et des aspirations dominantes (fussent-ils subversifs en apparence), que l’on peut transformer son rapport au monde et dépasser cette misère intellectuelle. Lier ses convictions politiques à ses ambitions personnelles, les assumer jusqu’au bout, est le  meilleur moyen de reprendre le contrôle de sa vie et d’agir consciemment sur le monde.</p>
 			<p>Nous pensons trouver là l’essentiel de ce qu’il y a à dire sur la plupart des sujets qui nous intéressent, et offrir les moyens d’aborder le contenu théorique qu’exige une révolution sans compromis.</p>
-			<span>    
+			<p>Les Editions Plagiat.</p><span>    
 	         
             <br>
 			
