--- a/plagiat_ed_histoire_la_commune.html
+++ b/plagiat_ed_histoire_la_commune.html
@@ -129,7 +129,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1VZEk22n_Rw5DLu9jaGcg-3kAn6d_E-7D" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/1VZEk22n_Rw5DLu9jaGcg-3kAn6d_E-7D" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
