--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -72,8 +72,9 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Catalogue des bandes dessinées parues et en libre accès.</h3>Lecture en ligne (cliquer sur l'image) ou sur le lien pdf (attention, les pdf sont très lourds afin de garder une bonne qualité dans le rendu des planches). 
-			Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
+			<caption><span><h3>Catalogue des bandes dessinées parues et en libre accès.</h3>Lecture en ligne (cliquer sur l'image) ou sur le lien pdf.
+			<br>Attention, les pdf sont très lourds afin de garder une bonne qualité dans le rendu des planches. 
+			<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
 	         
             <br>
 			
