--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Editions Plagiat</title> 
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
-<link rel="stylesheet" href="plagiat_ed_BD_ne_pas_mourir.css" />
+<link rel="stylesheet" href="plagiat_ed.css" />
 </head>
 <body>
 
