Update and rename plagiat_ed_BD_ne_pas_mourir.html to plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html

--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -3,8 +3,8 @@
 <head>
 <title>Editions Plagiat-bd-ne-pas-mourir-comme-des-chiens/mamoste-din</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
-<link rel="stylesheet" href="plagiat_ed_BD_ne_pas_mourir.css" />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Ne pas mourir comme des chiens, roman graphique, bande dessinée, de Mamoste Dîn, lecture en ligne." />
+<link rel="stylesheet" href="plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.css" />
 </head>
 <body>
 
