--- a/plagiat_ed_histoire_protestations-1937.html
+++ b/plagiat_ed_histoire_protestations-1937.html
@@ -3,7 +3,7 @@
 <head>
 <title>Editions Plagiat socle théorique/1937</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Protestation devant les libertaires du présent et du futur sur les capitulations de 1937, lecture en ligne, et illustrations de Mamoste Dîn" />
 <link rel="stylesheet" href="plagiat_ed_histoire_.css" />
 </head>
 <body>
