--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -3,7 +3,7 @@
 <head>
 <title>Plagiat Edition boutique</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Boutique : BD romans graphiques et livres" />
 <link rel="stylesheet" href="plagiat_ed_boutique.css" />
 </head>
 <body>
@@ -92,7 +92,7 @@
             <br>
 			    <tr>
 			        <td width="200" id="imagesdesbd"><br>
-			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_boutique_npmcc.html">
+			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html">
 			            <img src="https://drive.google.com/uc?id=1ZWfoHwwlWHiiORTKBDbjK4ZTquk1Ed9B" alt="couverturebdMamostedin" width="200" height="auto" /></a>
 			        </td>
 				
