--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -83,7 +83,7 @@ Kurdes et des gilets jaunes. Le même combat pour la liberté
 et l'égalité sociale rencontre la même répression.
 La dessinatrice Mamoste Dîn nous fait découvrir le camp
 autogéré d'exilés kurdes de Lavrio en Grèce. Dans un subtil
-va?et?vient entre la Grèce et la France, entre les histoires
+va-et-vient entre la Grèce et la France, entre les histoires
 personnelles et les combats politiques des activistes kurdes
 et de la jeune Judith, venue documenter leur quotidien, nous
 partageons un moment de la vie du camp et apprenons à
