--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Editions Plagiat</title> 
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<meta name="google-site-verification" content="GyBIERbj9q30HJ_Cp38AewCCl3nzgIAC2TTq_VJo8e4" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat ed.css" />
 </head>
