--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -87,7 +87,11 @@
 			<caption><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.</h4> 
 			Catalogue rangé par ordre alphabétique 
-			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i><span></caption>    
+			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i>  
+			<br>Disponible aussi en anglais sur Drawing the times 
+			<a href="https://drawingthetimes.com/authors/margot-gustaedt/" title="cliquer">
+			et en français sur VisionCarto <span></caption> 
+			<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
 	         
             <br>
 			    <tr>
