--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -96,6 +96,11 @@
 					<p><span><u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
 					<a href="https://drive.google.com/uc?id=1J-naX-y-enJP2eQtpCgoZ0Selw46hz40" title="Pdf">
 					<p><span><u>We won't die the dog’s death by Mamoste&#8239;Dîn(eng.pdf)</u></a><span></p>
+					<a href="https://drawingthetimes.com/authors/margot-gustaedt/" title="cliquer">
+					<p>Disponible aussi en anglais sur Drawing the times</p>
+					<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
+					<p>En français sur VisionCarto <span></p> 
+					
 			        </td>
 		        </tr>
 			
