--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -22,7 +22,7 @@
 	                <td width="900" height="175" id="entete">
 					<h1><span>Editions Plagiat<span></h1>
 			</a>
-			<figcaption><span>Maison d'édition indépendante fondée sur la gratuité et la libre circulations de textes et de bandes dessinées<br> 
+			<figcaption><span>Maison d'édition indépendante fondée sur la gratuité et la libre circulation de textes et de bandes dessinées<br> 
 	avec pour volonté une révolution efficace et sans compromis.<span></figcaption>
 			        </td>
 		    </tr>
