--- a/plagiat_ed_histoire_VR_chap_5.html
+++ b/plagiat_ed_histoire_VR_chap_5.html
@@ -21,7 +21,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<h1><span>Editions Plagiat<span></h1>
-			<figcaption><span>Maison d'édition indépendante fondée sur la gratuité et la libre circulations de textes et de bandes dessinées<br> 
+			<figcaption><span>Maison d'édition indépendante fondée sur la gratuité et la libre circulation de textes et de bandes dessinées<br> 
 	avec pour volonté une révolution efficace et sans compromis&#8239;.<span></figcaption>
 			        </td>
 		    </tr>
