--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -85,7 +85,7 @@
 			    <tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html">
-			            <img src="https://drive.google.com/uc?id=1ZWfoHwwlWHiiORTKBDbjK4ZTquk1Ed9B" alt="couverturebdMamostedin" width="180" height="auto" /></a>
+			            <img src="https://raw.githubusercontent.com/Les-Editions-Plagiat/Les-Editions-Plagiat.github.io/main/image_site/Nepasmourircommedeschiens_MamosteD%C3%AEn.jpg" alt="couverturebdMamostedin" width="180" height="auto" /></a>
 			        </td>
 				
 					
