--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -14,14 +14,14 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
 					
 	                <td width="900" height="175" id="entete">
 					<a id="boutique" rel="elephant">
-				<img src="https://drive.google.com/uc?id=1vBwsiwM4oKghlHdXuFcf-C-NCYerKGQv" alt="Plagiat Editions entête" width="900" height="167" />
+				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>Nous avons exagéré le superflu, nous n'avons plus le nécessaire.</cite> Proudhon<span></figcaption>
 			        </td>
@@ -118,7 +118,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/essais">
-				<img src="https://drive.google.com/uc?id=1VQaYRU3Ymxm15OYxihqwvgy--qaVS8UF" alt="affichemarchand" width="300" height="auto" />
+				<img src="image_site/affichemarchand.jpg" alt="affichemarchand" width="300" height="auto" />
 			</a>
     </div>
   </div>
