--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			        <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
@@ -72,7 +72,7 @@
 	<br>
 	<br>
 		 <a id="partieune">
-				<img src="https://drive.google.com/uc?id=15eHYVmF9NmGJDefiRjAZxGIdLY_l8wMv" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
 				<img src="https://drive.google.com/uc?id=1gecQp38USN0W6e5NmzN0I6GC7_oJXk_v" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -99,10 +99,10 @@
 				<img src="https://drive.google.com/uc?id=1-QBlmItr22IIrmhf66ermp51Ri0cyuzK" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="https://drive.google.com/uc?id=1fR7yhqxNdPNMen4SYNmP42a4Vx-iFRxh" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page10.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1VWDaYZdplK0vHpt4-kw_lqT9voEQeu3-" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page11.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=1WXFWxsoMCyc6p1yRa8y02o-o_gzcgoOu" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -126,10 +126,10 @@
 				<img src="https://drive.google.com/uc?id=1Pf4kJ90VDr74uC-ydsMjfCgbJ38ZaJRd" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=1q63KxlK01Pa-_VI6lPQJSyBZDYM6Gh6P" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page19.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="https://drive.google.com/uc?id=1F6X-aFpIwiu3MRzMmW1mDSwjpC77LUON" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page20.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
 				<img src="https://drive.google.com/uc?id=1uAoOYN0E6DaxwLg0OxIm4Z-WHopXXi_X" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -159,16 +159,16 @@
 				<img src="https://drive.google.com/uc?id=1Ief67uVFtAm9kbcqU4d9RTVBwwD8q-EF" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1oL99xJqsIflSWrVZjd7EYrmOe4okuoQz" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page30.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
 				<img src="https://drive.google.com/uc?id=1Q_18yFHi9fBGIXPkU-lSHg5UxqdOiPpX" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="https://drive.google.com/uc?id=1ladXQV7Qkt_S59t8EUfO26YNHx_vqU7l" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page32.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1v4pS1o7oOktDhqiMxzqqEK_7OiKLHUfc" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page33.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
 				<img src="https://drive.google.com/uc?id=1JJDOawxZ518WhaA7zIBnbm5gKNJ8bcfw" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -180,7 +180,7 @@
 				<img src="https://drive.google.com/uc?id=1m1AyoO3zRrV8E1cCiFYZGtrqHyw5Bf8y" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
 	<a id="partieune">
-				<img src="https://drive.google.com/uc?id=1e_YTbEL2PrFGSKRZIYdIAVHzUBkgsH5b" alt="Ne pas mourir comme des chiens de Mamoste Din p37" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page37.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din p37" width="850" height="auto" />
 			</a> 
          <a id="partie2">
 				<img src="https://drive.google.com/uc?id=1a2IAsP15tmxw9rNFiOOuwNZlug4wctmJ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -210,7 +210,7 @@
 				<img src="https://drive.google.com/uc?id=19baHevTo_hFX9o_LVrJSspVrydKmDmeZ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1uaeE_BfadTSlz4OQEe08oQL8BDOuauuq" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page47.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=1tuBpEaaM5l_wV7UUrwQjU-OXcmthuymB" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -228,7 +228,7 @@
 				<img src="https://drive.google.com/uc?id=1UpzZSPoAOkm5bh1kWyrTVDigNItFy7hl" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=19ZsW0UBTDEDYqbwoujhxjIyi_tvaFRjo" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page53.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
 				<img src="https://drive.google.com/uc?id=1q1_7vTWP82vzYqIW5UGWp--S8NRcexgq" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -243,10 +243,10 @@
 				<img src="https://drive.google.com/uc?id=1yRZWJmKLEt8fS6f8iJKH8Bh9JhY_0tBj" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="https://drive.google.com/uc?id=18_bfFZMAc8j5nJIe7uc0OAh1O-lMHg2w" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page58.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1UHGDiXOwHjuFBfVT4FQFLu5DGOaOQ0e7" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page59.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=14JOZGjrSeJnkr0sI_jrrHnXinsK9Ttd5" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -297,7 +297,7 @@
 				<img src="https://drive.google.com/uc?id=1SdRXb80Tb35Dh-_UrLtIybu00Co2fsya" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1n7UG-ODEktWpRzj0C_iINHz33yHeFiYO" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page76.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
 				<img src="https://drive.google.com/uc?id=1aTBtdR0r2yXS4tgvy3N4VZbJV41WJ1WI" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -312,7 +312,7 @@
 				<img src="https://drive.google.com/uc?id=1nlMsXg191xjPKXpLau6yOPgYgo3xm8_6" alt="Ne pas mourir comme des chiens de Mamoste Din p 80" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1MWJ0N5xQcMj747AGI4j6KTC-jFf3WICZ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page81.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
 				<img src="https://drive.google.com/uc?id=1EjnZQ6E5a9BAm8MSIN2_XIZnxIHnAMvP" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -339,7 +339,7 @@
 				<img src="https://drive.google.com/uc?id=1FsYw-HQd-80R18Fboa8FYJY_nu0bOGeO" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1QliJLO_rnP4Ak6ONQP6N3Gj3R4Bmv8eD" alt="Ne pas mourir comme des chiens de Mamoste Din p 90" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page90.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din p 90" width="850" height="auto" />
 			</a>
          <a id="partie7">
 				<img src="https://drive.google.com/uc?id=11FP9QEYAmky-8vpxyJtudAr15pW7qjdL" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -369,7 +369,7 @@
 				<img src="https://drive.google.com/uc?id=1d3CFmxBF_GZ3tAuZOAQR5XyxE0Z10o_v" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=175KIcogJIhAdCGNrZbBtjjv5lUrrHQLS" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page100.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
 				<img src="https://drive.google.com/uc?id=1O0DJfV6rWGHAwHfYXdcwkx8zq39XJT5s" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
