--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -144,10 +144,10 @@
 				<img src="https://drive.google.com/uc?id=19_j9tI9m9fxSmvaAauisETSj2Myc2r4L" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
 	<a id="partieune">
-				<img src="https://drive.google.com/uc?id=1cm4uKjM0TSbvONlnuhlIt8c3ELGN04Ny" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page25.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1H2SYz2r4Tzu_npEjqyLjwTBFY5VHcwJF" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page26.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
 				<img src="https://drive.google.com/uc?id=1INCA3mxLsJeEpVxLspBCewhvYI7gx2O4" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
