--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -14,14 +14,14 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
 					
 	                <td width="900" height="175" id="entete">
 					<a id="contacts" rel="tolbiac">
-				<img src="https://drive.google.com/uc?id=1EqJ06Hk8G6lfdu0FGgRJWg6CUCt5mOYb" alt="Plagiat Editions entête" width="900" height="167" />
+				<img src="image_site/tolbiac.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>Lever matin n'est point bonheur&#8239;; boire matin est le meilleur&#8239;.</cite> Rabelais<span></figcaption>
 			        </td>
@@ -105,7 +105,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
      <a id="affiche" rel="catalogue/essais">
-				<img src="https://drive.google.com/uc?id=12oTfASI56xQt-yFCZZBXx62tKhytbip0" alt="affiche1tolbiac" width="300" height="auto" />
+				<img src="image_site/page42.jpg" alt="affiche1tolbiac" width="300" height="auto" />
 			</a>
     </div>
   </div>
