--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -14,14 +14,14 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
 					
 	                <td width="900" height="175" id="entete">
 			<a id="enteteaction-histoire" rel="elephant">
-				<img src="https://drive.google.com/uc?id=1iXfxNW0s6AJHM9i2_OT3xuwDLPO9KWRQ" alt="Plagiat Editions entête"  />
+				<img src="image_site/pagehistoire2.jpg" alt="Plagiat Editions entête"  />
 			</a>
 			<figcaption><span><cite>Les pauvres sont coupables de l'existence des riches.</cite> Stirner<span></figcaption>
 			        </td>
@@ -293,7 +293,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/histoire">
-				<img src="https://drive.google.com/uc?id=1TvYWZuSO4KTrjrvLx8jnqsg2ZXCgmTPX" alt="affiche120corps" width="300" height="auto" />
+				<img src="image_site/affiche120.jpg" alt="affiche120corps" width="300" height="auto" />
 			</a>
     </div>
   </div>
