--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Plagiat Edition BD</title>  
+<title>Editions Plagiat BD</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. BD, Roman Graphique, Lecture en ligne." />
 <link rel="stylesheet" href="plagiat_ed_BD.css" />
