--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -72,8 +72,8 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>plagiatedition(at)protonmail.com</h3>
-			<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
+			<caption>mail général<span><h3>plagiatedition(at)protonmail.com</h3>
+			<p<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
 			<h3>editions-plagiat-admin(at)protonmail</h3>
 			
 			
@@ -86,7 +86,7 @@
 			
 			    <tr>
 	                <td width="425" id="titre">
-						<span><p><br>liste des auteurs :<br><br>
+						<span><p><br>Index des auteurs :<br><br>
 						ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique).<br><br>
 						DEBORD, Guy, <i>Sur la Commune, Le Questionnaire de l’I.S., De la misère en milieu étudiant, Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> et de <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique).<br><br>
 						DIN, Mamoste, <i>Ne pas mourir comme des chiens</i> (bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique), et graphisme du site.<br><br>
