--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -72,9 +72,9 @@
 	
 	<br>
 	<br>
-			<caption>mail général<span><h3>plagiatedition(at)protonmail.com</h3>
-			<p<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
-			<h3>editions-plagiat-admin(at)protonmail</h3>
+			<caption>mail général <span><h3>plagiatedition(at)protonmail.com</h3>
+			<p>mail bande dessinée </p><h3>bd-graphisme-plagiat(at)protonmail.com</h3>
+			<p>mail réservé uniquement pour des besoins administratif</p><h3>editions-plagiat-admin(at)protonmail</h3>
 			
 			
 			<br>Ne pas hésiter à nous contacter avec le mail adéquat pour nous relayer textes ou autres productions&#8239;.
