--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -23,7 +23,7 @@
 					<a id="entetebd" rel="debutbd">
 				<img src="image_site/giletjaunes.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>Il faut des jeunes Français qui aient envie de devenir milliardaires.</cite> Macron<span></figcaption>
+			<figcaption><span><cite>Il faut des jeunes Français qui aient envie de devenir milliardaires.</cite>Emmanuel Macron<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
