--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -23,7 +23,7 @@
 			<a id="enteteaction-histoire" rel="elephant">
 				<img src="image_site/pagehistoire2.jpg" alt="Plagiat Editions entête"  />
 			</a>
-			<figcaption><span><cite>Les pauvres sont coupables de l'existence des riches.</cite> Stirner<span></figcaption>
+			<figcaption><span><cite></cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
