--- a/plagiat_ed_articles.html
+++ b/plagiat_ed_articles.html
@@ -22,7 +22,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<a id="enteteaction-evenements" rel="debutaction">
-				<img src="https://drive.google.com/uc?id=1Trh4CIou8SK0OSD715Pn4Mc3IXB4vkE3" alt="Plagiat Editions entête" />
+				<img src="image_site/orange_et_couteau.jpg" alt="Plagiat Editions entête" />
 			</a>
 			<figcaption><span><cite></cite><span></figcaption>
 			        </td>
@@ -110,7 +110,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a>
-				<img src="https://drive.google.com/uc?id=1QQZvF9Hb5XYlSX1fMFE5aIUqhd0IBnyo" alt="affichesHegeletMarx" width="300" height="auto" id="affiche"/>
+				<img src="image_site/afficheHM.jpg" alt="affichesHegeletMarx" width="300" height="auto" id="affiche"/>
 			</a>
     </div>
   </div>
