--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -21,7 +21,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<a id="corpus" rel="elephant">
-				<img src="https://drive.google.com/uc?id=1oDnG5XbwVrIdM8poMz1tJFsccNdrHEmq" alt="Plagiat Editions entête" />
+				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
 			</a>
 			<figcaption><span><cite>J’ai eu alors l’occasion de lire plusieurs bons livres&#8239;,<br>à partir desquels il est toujours possible de trouver par soi-même tous les autres voire d’écrire ceux qui manquent&#8239;encore&#8239;.
 			</cite> Debord<span></figcaption>
@@ -127,7 +127,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/essais">
-				<img src="https://drive.google.com/uc?id=1qN8Uedj7w6RQ4_igFi58z0-CNnSal1Rm" alt="affiche1tolbiac" width="300" height="auto" />
+				<img src="image_site/affichetolbiac.jpg" alt="affiche1tolbiac" width="300" height="auto" />
 			</a>
     </div>
   </div>
