--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -21,7 +21,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<a id="entetebd" rel="debutbd">
-				<img src="https://drive.google.com/uc?id=1QM1lWskxNyjW0mHL997_COIXcx8EXNM9" alt="Plagiat Editions entête" width="900" height="167" />
+				<img src="image_site/marcheurs.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>La citatiomanie est notre plus grande ennemie.</cite> Lénine<span></figcaption>
 			        </td>
@@ -141,7 +141,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/lien">
-				<img src="https://drive.google.com/uc?id=1ns_FSwM2A9XmS7oHdun1hhmG6-0sB7T0" alt="affichesnousnavonsrienanousqueletemps" width="300" height="auto" />
+				<img src="image_site/marcheurs.jpg" alt="affichesnousnavonsrienanousqueletemps" width="300" height="auto" />
 			</a>
     </div>
   </div>
