--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -141,7 +141,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/lien">
-				<img src="image_site/marcheurs.jpg" alt="affichesnousnavonsrienanousqueletemps" width="300" height="auto" />
+				<img src="image_site/loups.jpg" alt="affichesnousnavonsrienanousqueletemps" width="300" height="auto" />
 			</a>
     </div>
   </div>
