--- a/plagiat_ed_articles.html
+++ b/plagiat_ed_articles.html
@@ -62,7 +62,7 @@
 
 			<li><a href="plagiat_ed_boutique.html"><span>Boutique</span></a></li>
 			
-			<li><a href="plagiat_ed_rdv.html"><span>Rendez-vous</span></a></li>		
+			<li><a href="plagiat_ed_index.html"><span>Index et Catalogue</span></a></li>		
 
         </ul>
   </div>
