--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -77,8 +77,7 @@
 			
 			
 			
-			<br>Ne pas hésiter à nous contacter avec le mail adéquat pour nous relayer textes ou autres productions&#8239;.
-				<br> pour toutes autres raisons utiliser le mail administratif. <span></caption>    
+			<br>Ne pas hésiter à nous contacter avec le mail adéquat pour nous relayer textes ou autres productions&#8239;.</caption>    
 	            
 	         
             <br>
