--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="index_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
@@ -61,7 +61,7 @@
 
 			<li><a href="plagiat_ed_boutique.html"><span>Boutique</span></a></li>
 			
-			<li><a href="plagiat_ed_rdv.html"><span>Rendez-vous</span></a></li>		
+			<li><a href="plagiat_ed_index.html"><span>Index et Catalogue</span></a></li>			
 
         </ul>
   </div>
