--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -84,14 +84,14 @@
 			
 			
 			
-			    <tr width="200" id="illu1937"><br>
+			    <td width="200" id="illu1937"><br>
 			                <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="7QDGPFCH8YNSJ" />
 <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/fr_FR/i/scr/pixel.gif" width="1" height="1" />
 </form>
 		            
-		        </tr>
+		        </td>
 			
 	        </table>	 
 	
