--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -84,7 +84,7 @@
 			
 			
 			
-			    <td width="200" id="illu1937"><br>
+			    <td width="400" id="don"><br>
 			                <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="7QDGPFCH8YNSJ" />
 <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
