--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -124,7 +124,7 @@ partageons un moment de la vie du camp et apprenons à
 			        </td>
 					
 					<td width="250" id="textesdesbd">
-					<p><span><b>Types de paiement :</b><br>
+					<p><span><b>Type de paiement :</b><br>
 					<p style="color:purple"><span> <b> Paypal</b></p><span>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
