--- a/plagiat_ed_articles.html
+++ b/plagiat_ed_articles.html
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			       <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 				  
 			</a>   
 			        </td>
@@ -24,7 +24,7 @@
 					<a id="enteteaction-evenements" rel="debutaction">
 				<img src="image_site/orange_et_couteau.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite></cite><span></figcaption>
+			<figcaption><span><cite>Tout ce qui maintient quelque chose contribue au travail de la police. Car nous savons que toutes les idées ou les conduites qui existent déjà sont insuffisantes.</cite>Manifeste lettriste écrit le 19 février 1953.<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
