--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -23,7 +23,7 @@
 					<a id="boutique" rel="elephant">
 				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
-			<figcaption><span><cite>Nous avons exagéré le superflu, nous n'avons plus le nécessaire.</cite> Proudhon<span></figcaption>
+			<figcaption><span><cite></cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
