--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -109,7 +109,7 @@ partageons un moment de la vie du camp et apprenons à
 					<p><span><i>Ne pas mourir comme des chiens</i><span></p>
 					<p><span>de Mamoste Dîn<span></p>
 					<p><span>Achevé d'imprimer en 2021 en France</p>
-					<p><span><b>prix 12 euros</b>, sans les frais de port<span></p>
+					<p><span><b>prix 12 euros</b>, sans frais de port<span></p>
 					
 				
 			        </td>
@@ -126,7 +126,7 @@ partageons un moment de la vie du camp et apprenons à
 					<td width="250" id="textesdesbd">
 					<p><span>Dépot Légal 31/03/2021<span></p>
 					<p><span><b>Type de paiement :</b><br>
-					<p style="color:purple"><span> <b> Paypal</b></p><span>
+					<p style="color:purple"><span> <b>Paypal</b> + 2 euros de livraison</p><span>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="S7PJPV3PB3J62">
