--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -124,9 +124,9 @@ partageons un moment de la vie du camp et apprenons à
 			        </td>
 					
 					<td width="250" id="textesdesbd">
-					<p><span>Dépot Légal 31/03/2021<span></p>
-					<p><span><b>Type de paiement :</b><br><a href="plagiat_ed_virement.html">
-					<span> <b>Virement</b></p><span>
+					<p><span>Type de paiement :<span></p>
+					<a href="plagiat_ed_virement.html">
+					<p><span><b>Virement</b></p><span>
 					<p style="color:purple"><span>ou <b>Paypal</b> + 2 euros de livraison</p><span>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
