--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -148,7 +148,7 @@ partageons un moment de la vie du camp et apprenons à
 						
 						<p><span> PS : Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
 							En passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
-							Ne pas vous inquieter s'il y a un temps de l'attence, c'est normal.</p><span>
+							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p><span>
   </div>
 
   <div class="col-3 col-s-12">
