--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -85,7 +85,7 @@
 			    <tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html">
-			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="couverturebdMamostedin" width="180" height="auto" /></a>
+			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="Ne_pas_mourir_comme_des_chiens/mamoste_din" width="180" height="auto" /></a>
 			        </td>
 				
 					
